kubernetes/gatekeeper/resource-limit-contrains.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResourceLimits
metadata:
  name: require-resource-limits
spec:
  match:
    kinds:
    - apiGroups: ["*"]
      kinds: ["Pod"]
    namespaces: ["default"]
